#132: Added UseNameElementLogic and updated UseNameElement UCs