@@ -17,15 +17,17 @@
 package com.echothree.control.user.offer.server.command;
 
 import com.echothree.control.user.offer.common.form.GetUseNameElementForm;
+import com.echothree.control.user.offer.common.result.GetUseNameElementResult;
 import com.echothree.control.user.offer.common.result.OfferResultFactory;
+import com.echothree.model.control.core.common.EventTypes;
 import com.echothree.model.control.offer.server.control.UseNameElementControl;
+import com.echothree.model.control.offer.server.logic.UseNameElementLogic;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.data.offer.server.entity.UseNameElement;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
 import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.server.control.BaseSingleEntityCommand;
@@ -33,6 +35,8 @@ import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
 import com.echothree.util.server.persistence.Session;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 public class GetUseNameElementCommand
@@ -42,16 +46,20 @@ public class GetUseNameElementCommand
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
     
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
                         new SecurityRoleDefinition(SecurityRoleGroups.UseNameElement.name(), SecurityRoles.Review.name())
-                ))
-        ));
+                        )))
+                )));
         
-        FORM_FIELD_DEFINITIONS = List.of(
-                new FieldDefinition("UseNameElementName", FieldType.ENTITY_NAME, true, null, null)
-        );
+        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
+                new FieldDefinition("UseNameElementName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
+                new FieldDefinition("Key", FieldType.KEY, false, null, null),
+                new FieldDefinition("Guid", FieldType.GUID, false, null, null),
+                new FieldDefinition("Ulid", FieldType.ULID, false, null, null)
+                ));
     }
     
     /** Creates a new instance of GetUseNameElementCommand */
@@ -61,26 +69,24 @@ public class GetUseNameElementCommand
     
     @Override
     protected UseNameElement getEntity() {
-        var useNameElementControl = (UseNameElementControl)Session.getModelController(UseNameElementControl.class);
-        var sourceName = form.getUseNameElementName();
-        var source = useNameElementControl.getUseNameElementByName(sourceName);
-        
-        if(source == null) {
-            addExecutionError(ExecutionErrors.UnknownUseNameElementName.name(), sourceName);
+        UseNameElement useNameElement = UseNameElementLogic.getInstance().getUseNameElementByUniversalSpec(this, form);
+
+        if(useNameElement != null) {
+            sendEventUsingNames(useNameElement.getPrimaryKey(), EventTypes.READ.name(), null, null, getPartyPK());
         }
-        
-        return source;
+
+        return useNameElement;
     }
     
     @Override
-    protected BaseResult getTransfer(UseNameElement source) {
+    protected BaseResult getTransfer(UseNameElement useNameElement) {
         var useNameElementControl = (UseNameElementControl)Session.getModelController(UseNameElementControl.class);
-        var result = OfferResultFactory.getGetUseNameElementResult();
-        
-        if(source != null) {
-            result.setUseNameElement(useNameElementControl.getUseNameElementTransfer(getUserVisit(), source));
+        GetUseNameElementResult result = OfferResultFactory.getGetUseNameElementResult();
+
+        if(useNameElement != null) {
+            result.setUseNameElement(useNameElementControl.getUseNameElementTransfer(getUserVisit(), useNameElement));
         }
-        
+
         return result;
     }
     
